examples/expected/check_invalid_safe_misinformation.txt
error[E3002]: cannot prove constraint 'misinformation' at compile time
help: add safety proof: `@safety(score=0.98, dataset="factcheck-v3")`
  --> examples/invalid_safe_misinformation.tp:2:41
   |
 2 | 	let x: Safe<string, !misinformation> = "ok";
   |                                         ^^^^
